# emulator-chip8

./: .gitignore  CMakeLists.txt  main.cpp
src/: Chip8.cpp  Chip8.h  Platform.cpp  Platform.h  main.cpp
